<resources>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="no_upload">- No upload -</string>
    <string name="searching_for_device_format">searching for %1$s…</string>
    <string name="waiting">waiting</string>
    <string name="searching">searching</string>
    <string name="research">Search</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Pause">Pause</string>
    <string name="Paused">Paused</string>
    <string name="Resume">Resume</string>
    <string name="Tracking">Tracking</string>
    <string name="StartPositionTitle">Start</string>
    <string name="EndPositionTitle">Stop</string>
    <string name="Lap">Lap</string>
    <string name="Equipment">Equipment</string>
    <string name="edit_device">edit device</string>
    <string name="edit_workout">edit workout</string>
    <string name="save_as_route">save as route</string>
    <string name="edit_wheel_circumference">edit wheel circumference</string>
    <string name="edit_calibration_factor">edit calibration factor</string>
    <string name="delete">delete</string>
    <string name="mark_as_finished">Mark as finished</string>
    <string name="delete_device">delete device</string>
    <string name="delete_pebble_view">delete Pebble view</string>
    <string name="delete_tracking_view">delete tracking view</string>
    <string name="delete_workout">delete workout</string>
    <string name="deleteOldWorkouts">delete old workouts</string>
    <string name="deleteWorkoutsThatAreOlderThanDays">delete all workouts that are older than … days</string>
    <string name="defaultDaysToKeep" translatable="false">365</string>
    <string name="really_delete_old_workouts_format">Do you really want to delete all workouts older than %1$d days?</string>
    <string name="really_delete_workout">Do you really want to delete this workout?</string>
    <string name="really_delete_pebble_view_format">Do you really want to delete the Pebble view "%1$s"?</string>
    <string name="really_delete_view_format">Do you really want to delete the tracking view "%1$s"?</string>
    <string name="deleting_please_wait">Deleting workout …\nplease wait</string>
    <string name="deleting_workout">Deleting: %1$s…</string>
    <string name="calculating_extrema_value_for">calculating %1$s of %2$s</string>
    <string name="initializing">initializing</string>
    <string name="show_HW_details">show HW details</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
    <string name="Preferences">Preferences</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="pause_tracking">Pause Tracking</string>
    <string name="resume_tracking">Resume Tracking</string>
    <string name="start_or_resume_dialog_message">The previous workout was not finished properly.\n Do you want to start a new workout or resume the previous one?</string>
    <string name="start_new_workout">Start new</string>
    <string name="resume_workout">Resume prev.</string>
    <string name="tracking_interrupted_notification_title">Tracking Interrupted</string>
    <string name="tracking_interrupted_notification_text">Workout tracking was paused by Android. Tap to resume.</string>
    <string name="SD_card">SD-card</string>
    <string name="File">File</string>
    <string name="Community">Community</string>
    <string name="Dropbox" translatable="false">Dropbox</string>
    <string name="Strava" translatable="false">Strava</string>
    <string name="Runkeeper" translatable="false">Runkeeper</string>
    <string name="CSV" translatable="false">CSV</string>
    <string name="TCX" translatable="false">TCX</string>
    <string name="GPX" translatable="false">GPX</string>
    <string name="GC" translatable="false">GC</string>
    <string name="FIT" translatable="false">FIT</string>
    <string name="TrainingPeaks" translatable="false">TrainingPeaks</string>
    <string name="unknown_manufacturer">Unknown</string>
    <string name="unknown_last_seen_date">never seen</string>
    <string name="next">next</string>
    <string name="text_new">new</string>
    <string name="prev">prev</string>
    <string name="name">name</string>
    <string name="number_of_fields">Number of fields:</string>
    <string name="Lap_NR">Lap %1$d</string>
    <string name="build_in">Built-in</string>
    <string name="TrainingTracker" translatable="false">a Training Tracker</string>
    <string name="application_name" translatable="false">a Training Tracker</string>
    <string name="add_sensor">add sensor</string>
    <string name="commute">commute</string>
    <string name="trainer_general">indoor trainer</string>
    <string name="trainer_bike">indoor trainer</string>
    <string name="trainer_run">treadmill</string>
    <string name="guess_commute_and_trainer">guess commute and trainer</string>
    <string name="pebble_build_in">Standard Pebble Watchapp</string>
    <string name="pebble_a_training_tracker_watchapp">a Training Tracker Watchapp</string>
    <string name="install_ant_plugin_message">To use ANT+, you must have the ANT+ Plugin Service installed.</string>
    <string name="install_ant_plugin_ok">OK, install ANT+ Plugin Service now</string>
    <string name="protocol_ant_plus" translatable="false">ANT+</string>
    <string name="protocol_bluetooth" translatable="false">Bluetooth LE</string>
    <string name="protocol_all">all</string>
    <string name="protocol_unknown">Unknown</string>
    <string name="METRIC" translatable="false">METRIC</string>
    <string name="IMPERIAL" translatable="false">IMPERIAL</string>
    <string name="BUILD_IN" translatable="false">BUILD_IN</string>
    <string name="TRAINING_TRACKER" translatable="false">TRAINING_TRACKER</string>
    <string name="units_type_metric">metric (m)</string>
    <string name="units_type_imperial">imperial (mile)</string>
    <string name="units_speed_basic" translatable="false">m/s</string>
    <string name="units_speed_metric" translatable="false">km/h</string>
    <string name="units_speed_imperial" translatable="false">mile/h</string>
    <string name="units_vertical_speed_basic" translatable="false">m/h</string>
    <string name="units_speed_unknown" translatable="false">n/a</string>
    <string name="units_speed_short_metric" translatable="false">km/h</string>
    <string name="units_speed_short_imperial" translatable="false">mi/h</string>
    <string name="units_pace_basic" translatable="false">s/m</string>
    <string name="units_pace_metric" translatable="false">min/km</string>
    <string name="units_pace_imperial" translatable="false">min/mile</string>
    <string name="units_pace_unknown" translatable="false">n/a</string>
    <string name="units_pace_short_metric" translatable="false">/km</string>
    <string name="units_pace_short_imperial" translatable="false">/mi</string>
    <string name="units_pace_short_unknown" translatable="false">/na</string>
    <string name="units_distance_basic" translatable="false">m</string>
    <string name="units_distance_metric" translatable="false">km</string>
    <string name="units_distance_imperial" translatable="false">mile</string>
    <string name="units_distance_unknown" translatable="false">na</string>
    <string name="units_altitude_metric" translatable="false">m</string>
    <string name="prefsBasic">Basic</string>
    <string name="prefs_Display">Display</string>
    <string name="prefsAdvanced">Advanced</string>
    <string name="prefsDisplaySummary">Configure screen and orientation behavior</string>
    <string name="prefsUnitsTitle">Units</string>
    <string name="prefsUnitsSummary">metric</string>
    <string name="prefsConfigureDisplaysTitle">Tracking Tabs</string>
    <string name="prefsExportTitle">Export</string>
    <string name="prefsOnlineCommunities">Synchronization</string>
    <string name="updateStravaEquipment">Update Strava Equipment</string>
    <string name="lastUpdateOfEquipmentNever">never updated</string>
    <string name="updateStravaRoutes">Update Strava Routes</string>
    <string name="lastUpdateOfRoutesNever">never updated</string>
    <string name="updateStravaSegments">Update Strava Segments</string>
    <string name="lastUpdateOfSegmentsNever">never updated</string>
    <string name="automated_strava_segments_sync">Automated Segment Sync</string>
    <string name="automated_strava_segments_sync_summary">Regularly fetch starred segments from Strava</string>
    <string name="strava_segments_sync_interval">Sync Interval</string>
    <string name="automated_strava_routes_sync">Automated Route Sync</string>
    <string name="automated_strava_routes_sync_summary">Regularly fetch routes from Strava</string>
    <string name="strava_routes_sync_interval">Sync Interval</string>
    <string name="tab_start">Start</string>
    <string name="tab_map">Map</string>
    <string name="tab_workouts">Workouts</string>
    <string name="csvWrite">export to CSV</string>
    <string name="jsonWrite">export to Golden Cheetah json</string>
    <string name="tcxWrite">export to TCX</string>
    <string name="gpxWrite">export to GPX</string>
    <string name="stravaUpload">upload to Strava</string>
    <string name="runkeeperUpload">upload to Runkeeper</string>
    <string name="trainingPeaksUpload">upload to TrainingPeaks</string>
    <string name="my_locations">Favorite Tracks</string>
    <string name="drawer__settings">Settings</string>
    <string name="editLocationName">Name:</string>
    <string name="LocationAltitude">Altitude:</string>
    <string name="LocationRadius">Radius:</string>
    <string name="segments">Strava Segments</string>
    <string name="Display">Display</string>
    <string name="Search_Settings">Search</string>
    <string name="prefsNumberOfSearchTriesTitle">Number of search rounds</string>
    <string name="prefStartSearchTitle">Start search when …</string>
    <string name="prefsStartSearchWhenAppStartsTitle">App starts</string>
    <string name="prefsStartSearchWhenTrackingStartsTitle">Tracking starts</string>
    <string name="prefsStartSearchWhenResumeFromPausedTitle">Resume after pause</string>
    <string name="prefsStartSearchWhenUserChangesSportTitle">You change the sport</string>
    <string name="prefs_search_behavior_title">Search Behavior</string>
    <string name="prefsChangeSportWhenDeviceGetsLostTitle">Change activity type</string>
    <string name="prefsChangeSportWhenDeviceGetsLostSummary">Change activity type when sensor gets lost</string>
    <string name="prefsSearchOnlyForSportSpecificDevicesTitle">Sport specific search</string>
    <string name="prefsSearchOnlyForSportSpecificDevicesSummary">Search only for sport specific sensor</string>
    <string name="sport_types">Sport Types</string>
    <string name="uploadGPS" translatable="false">GPS</string>
    <string name="uploadAltitude">altitude</string>
    <string name="uploadHR">heart rate</string>
    <string name="uploadPower">power</string>
    <string name="uploadCadence">cadence</string>
    <string name="selectiveUpload">Selective Upload</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="prefs_training_zones">Training Zones</string>
    <string name="drawer__training">Training</string>
    <string name="drawer__maps">Maps</string>
    <string name="drawer__my_stuff">Equipment</string>
    <string name="prefs_manage_bikes_title">Bikes</string>
    <string name="prefs_manage_shoes_title">Shoes</string>
    <string name="routes">Routes</string>
    <string name="workout_periods__periods">Periods</string>
    <string name="automated_backups">Automated Backups</string>
    <string name="automated_backups_summary">Regularly upload backups to Dropbox</string>
    <string name="backup_interval">Backup Interval</string>
</resources>