<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ aTrainingTracker (ANT+ BTLE)
  ~ Copyright (c) 2011 - 2026 Rainer Blind <rainer.blind@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer__training">
        <menu>
            <item
                android:id="@+id/drawer_start_tracking"
                android:icon="@drawable/control_start"
                android:title="@string/tab_start" />

            <item
                android:id="@+id/drawer_workouts"
                android:icon="@drawable/workout_list"
                android:title="@string/tab_workouts" />

            <item
                android:id="@+id/drawer_periods"
                android:icon="@drawable/ic_calendar_month"
                android:title="@string/workout_periods__periods" />

            <item
                android:id="@+id/drawer_tracking_layouts"
                android:icon="@drawable/ic_table_edit"
                android:title="@string/prefsConfigureDisplaysTitle" />

        </menu>
    </item>
    <item android:title="@string/drawer__maps">
        <menu>
            <item
                android:id="@+id/drawer_map"
                android:icon="@drawable/ic_map"
                android:title="@string/tab_map" />

            <item
                android:id="@+id/drawer_segments"
                android:icon="@drawable/ic_segment"
                android:title="@string/segments" />

            <item
                android:id="@+id/drawer_routes"
                android:icon="@drawable/ic_route"
                android:title="@string/routes" />

            <item
                android:id="@+id/drawer_my_locations"
                android:icon="@drawable/my_locations"
                android:title="@string/my_locations" />
        </menu>
    </item>
    <item android:title="@string/drawer__my_stuff">
        <menu>
            <item
                android:id="@+id/drawer_my_sensors"
                android:icon="@drawable/ic_my_paired_devices"
                android:title="@string/devices_myRemoteDevices" />

            <item
                android:id="@+id/drawer_bikes"
                android:icon="@drawable/ic_equipment_bike"
                android:title="@string/prefs_manage_bikes_title" />

            <item
                android:id="@+id/drawer_shoes"
                android:icon="@drawable/ic_equipment_shoe"
                android:title="@string/prefs_manage_shoes_title" />

            <item
                android:id="@+id/drawer_sport_types"
                android:icon="@drawable/ic_sports_combined"
                android:title="@string/sport_types" />

            <item
                android:id="@+id/drawer_training_zones"
                android:icon="@drawable/ic_zones_hr_run_combined"
                android:title="@string/prefs_training_zones" />

        </menu>
    </item>
    <item android:title="@string/prefsOnlineCommunities">
        <menu>
            <item
                android:id="@+id/drawer_strava"
                android:icon="@drawable/logo_square_strava"
                android:title="@string/Strava" />

            <item
                android:id="@+id/drawer_dropbox"
                android:icon="@drawable/dropbox_logo_blue"
                android:title="@string/Dropbox" />

            <item
                android:id="@+id/drawer_export"
                android:icon="@drawable/ic_upload"
                android:title="@string/prefsExportTitle" />
        </menu>
    </item>
    <item android:title="@string/drawer__settings">
        <menu>
            <item
                android:id="@+id/drawer_units"
                android:icon="@drawable/ic_square_foot"
                android:title="@string/prefsUnitsTitle" />
            <item
                android:id="@+id/drawer_display_settings"
                android:icon="@drawable/ic_display_settings"
                android:title="@string/Display" />
            <item
                android:id="@+id/drawer_search_settings"
                android:icon="@drawable/ic_search"
                android:title="@string/Search_Settings" />
            <item
                android:id="@+id/drawer_privacy_policy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>
</menu>
