<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ aTrainingTracker (ANT+ BTLE)
  ~ Copyright (c) 2011 - 2026 Rainer Blind <rainer.blind@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see https://www.gnu.org/licenses/gpl-3.0
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="updateStravaEquipment"
        android:summary="@string/lastUpdateOfEquipmentNever"
        android:title="@string/updateStravaEquipment"
        android:layout="@layout/preference_slim"/>

    <Preference
        android:key="updateStravaSegments"
        android:summary="@string/lastUpdateOfSegmentsNever"
        android:title="@string/updateStravaSegments"
        android:layout="@layout/preference_slim"/>

    <Preference
        android:key="updateStravaRoutes"
        android:summary="@string/lastUpdateOfRoutesNever"
        android:title="@string/updateStravaRoutes"
        android:layout="@layout/preference_slim"/>

    <PreferenceCategory
        android:title="@string/automated_strava_segments_sync">

        <SwitchPreferenceCompat
            android:key="automated_strava_segments_sync"
            android:title="@string/automated_strava_segments_sync"
            android:summary="@string/automated_strava_segments_sync_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="strava_segments_sync_interval_days"
            android:title="@string/strava_segments_sync_interval"
            android:summary="%s"
            android:entries="@array/backup_interval_entries"
            android:entryValues="@array/backup_interval_values"
            android:defaultValue="1"
            android:dependency="automated_strava_segments_sync" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/automated_strava_routes_sync">

        <SwitchPreferenceCompat
            android:key="automated_strava_routes_sync"
            android:title="@string/automated_strava_routes_sync"
            android:summary="@string/automated_strava_routes_sync_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="strava_routes_sync_interval_days"
            android:title="@string/strava_routes_sync_interval"
            android:summary="%s"
            android:entries="@array/backup_interval_entries"
            android:entryValues="@array/backup_interval_values"
            android:defaultValue="1"
            android:dependency="automated_strava_routes_sync" />

    </PreferenceCategory>

    <PreferenceCategory android:key="strava_selective_upload_category" android:title="@string/selectiveUpload">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="uploadStravaGPS"
            android:title="@string/uploadGPS"
            android:layout="@layout/preference_slim"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="uploadStravaAltitude"
            android:title="@string/uploadAltitude"
            android:layout="@layout/preference_slim"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="uploadStravaHR"
            android:title="@string/uploadHR"
            android:layout="@layout/preference_slim"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="uploadStravaPower"
            android:title="@string/uploadPower"
            android:layout="@layout/preference_slim"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="uploadStravaCadence"
            android:title="@string/uploadCadence"
            android:layout="@layout/preference_slim"/>
    </PreferenceCategory>

</PreferenceScreen>
