<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ aTrainingTracker (ANT+ BTLE)
  ~ Copyright (c) 2011 - 2026 Rainer Blind <rainer.blind@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see https://www.gnu.org/licenses/gpl-3.0
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="root">

    <PreferenceCategory android:title="@string/prefsBasic"
        android:layout="@layout/preference_category">

        <ListPreference
            android:defaultValue="METRIC"
            android:entries="@array/units"
            android:entryValues="@array/units_values"
            android:key="listUnits"
            android:summary="@string/prefsUnitsSummary"
            android:title="@string/prefsUnitsTitle"
            android:icon="@drawable/ic_square_foot"
            app:useSimpleSummaryProvider="true"
            android:layout="@layout/preference_slim"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_Display"
        android:icon="@drawable/ic_display_settings"
        android:layout="@layout/preference_category">

        <MultiSelectListPreference
            android:key="pref_display_options"
            android:title="@string/Display"
            android:summary="@string/prefsDisplaySummary"
            android:icon="@drawable/ic_checklist"
            android:entries="@array/display_options_titles"
            android:entryValues="@array/display_options_values"
            android:defaultValue="@array/display_options_defaults"
            android:layout="@layout/preference_slim" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefsAdvanced"
        android:layout="@layout/preference_category">

        <PreferenceScreen
            android:icon="@drawable/ic_search"
            android:key="search_settings"
            android:title="@string/Search_Settings"
            android:layout="@layout/preference_slim">

            <SeekBarPreference
                android:key="numberOfSearchTriesInt"
                android:title="@string/prefsNumberOfSearchTriesTitle"
                android:defaultValue="3"
                android:max="5"
                app:min="1"
                app:showSeekBarValue="true"/>

            <PreferenceCategory
                android:title="@string/prefStartSearchTitle"
                android:layout="@layout/preference_category">

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="startSearchWhenAppStarts"
                    android:title="@string/prefsStartSearchWhenAppStartsTitle"
                    android:layout="@layout/preference_slim"/>

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="startSearchWhenResumeFromPaused"
                    android:title="@string/prefsStartSearchWhenResumeFromPausedTitle"
                    android:layout="@layout/preference_slim"/>

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="startSearchWhenUserChangesSport"
                    android:title="@string/prefsStartSearchWhenUserChangesSportTitle"
                    android:layout="@layout/preference_slim"/>

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="startSearchWhenTrackingStarts"
                    android:title="@string/prefsStartSearchWhenTrackingStartsTitle"
                    android:layout="@layout/preference_slim"/>

            </PreferenceCategory>

            <PreferenceCategory
                android:title="@string/prefs_search_behavior_title"
                android:layout="@layout/preference_category">

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="searchOnlyForSportSpecificDevices"
                    android:summary="@string/prefsSearchOnlyForSportSpecificDevicesSummary"
                    android:title="@string/prefsSearchOnlyForSportSpecificDevicesTitle"
                    android:layout="@layout/preference_slim"/>

                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="changeSportWhenDeviceGetsLost"
                    android:summary="@string/prefsChangeSportWhenDeviceGetsLostSummary"
                    android:title="@string/prefsChangeSportWhenDeviceGetsLostTitle"
                    android:layout="@layout/preference_slim"/>
            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
