<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ aTrainingTracker (ANT+ BTLE)
  ~ Copyright (c) 2011 - 2026 Rainer Blind <rainer.blind@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SeekBarPreference
        android:key="numberOfSearchTriesInt"
        android:title="@string/prefsNumberOfSearchTriesTitle"
        android:defaultValue="3"
        android:max="5"
        app:min="1"
        app:showSeekBarValue="true"/>

    <PreferenceCategory
        android:title="@string/prefStartSearchTitle"
        android:layout="@layout/preference_category">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="startSearchWhenAppStarts"
            android:title="@string/prefsStartSearchWhenAppStartsTitle"
            android:layout="@layout/preference_slim"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="startSearchWhenResumeFromPaused"
            android:title="@string/prefsStartSearchWhenResumeFromPausedTitle"
            android:layout="@layout/preference_slim"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="startSearchWhenUserChangesSport"
            android:title="@string/prefsStartSearchWhenUserChangesSportTitle"
            android:layout="@layout/preference_slim"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="startSearchWhenTrackingStarts"
            android:title="@string/prefsStartSearchWhenTrackingStartsTitle"
            android:layout="@layout/preference_slim"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_search_behavior_title"
        android:layout="@layout/preference_category">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="searchOnlyForSportSpecificDevices"
            android:summary="@string/prefsSearchOnlyForSportSpecificDevicesSummary"
            android:title="@string/prefsSearchOnlyForSportSpecificDevicesTitle"
            android:layout="@layout/preference_slim"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="changeSportWhenDeviceGetsLost"
            android:summary="@string/prefsChangeSportWhenDeviceGetsLostSummary"
            android:title="@string/prefsChangeSportWhenDeviceGetsLostTitle"
            android:layout="@layout/preference_slim"/>
    </PreferenceCategory>

</PreferenceScreen>
