<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ aTrainingTracker (ANT+ BTLE)
  ~ Copyright (c) 2011 - 2026 Rainer Blind <rainer.blind@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Individual Drawer Item handles connection state via DropboxConnectionHeader -->

    <PreferenceCategory
        android:title="@string/automated_backups">

        <SwitchPreferenceCompat
            android:key="automated_backups"
            android:title="@string/automated_backups"
            android:summary="@string/automated_backups_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="backup_interval_days"
            android:title="@string/backup_interval"
            android:summary="%s"
            android:entries="@array/backup_interval_entries"
            android:entryValues="@array/backup_interval_values"
            android:defaultValue="1"
            android:dependency="automated_backups" />

    </PreferenceCategory>
</PreferenceScreen>
